// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarGroup /> should render correctly 1`] = `
<AvatarGroup__Container
  childrenSize={45}
  length={2}
>
  <div />
  <div />
</AvatarGroup__Container>
`;

exports[`<AvatarGroup /> should render correctly with other size 1`] = `
<AvatarGroup__Container
  childrenSize={34}
  length={3}
>
  <div />
  <div />
  <div />
</AvatarGroup__Container>
`;
